crates/test-files/fixtures/compile_errors/call_undefined_function_on_storage_struct.fe
struct Something:
  val: u8

contract Bar:
  thingy: Something

  pub fn test():
    self.thingy.doesnt_exist()